ci: disabled for now

--- a/.github/workflows/ios-artifact.yml
+++ b/.github/workflows/ios-artifact.yml
@@ -1,9 +1,7 @@
-name: iOS build artifact
+name: iOS build artifact (disabled)
 
 on:
   workflow_dispatch:
-  push:
-    branches: [ main ]
 
 jobs:
   build-ios:
